--- a/src/main/resources/templates/product/productReg.html
+++ b/src/main/resources/templates/product/productReg.html
@@ -60,9 +60,9 @@
                                                                 <li><a href="#" data-set='{"category_lv": "3", "group_id": "A" }'>ccc</a></li>
                                                                 <li><a href="#" data-set='{"category_lv": "3", "group_id": "A" }'>ccc</a></li>
                                                                 <li><a href="#" data-set='{"category_lv": "3", "group_id": "A" }'>ccc</a></li>
-                                                                
                                                             </ul>
                                                             -->
+                                                            
                                                         </div>
                                                     
                                                     </td>
@@ -269,40 +269,44 @@
 </th:block>
 
 <script>
-      
-      //페이지가 로드된 이후에 getCategory호출
-      $(document).ready(function(){
-         
-         $.ajax({
-            url:'../getCategory',
-            type:'get',
-            //data:~~,
-            success:function(data){
-               console.log(data);
-               
-               var category01 = "";
-               
-                category01 += '<ul class="categoryList" style="position: relative;" onclick="getCategory_List(event);" >';
-               	
-               	data.forEach(function(item){
-					   category01 += '<li><a href="#" data-set='+ JSON.stringify(item)+'>'+ item.category_detail_nm +'</a></li>';
-				   })
-               
-                                                           
-               category01 += '</ul>';
-               
-               //아래에 추가
-               $(".categoryListWrap").append(category01);
-               
-            },
-            error:function(status,err){
-               alert('카테고리 조회에 문제가 발생했습니다. 관리자에게 문의해주세요');
-            }
-         })
-         
-      })
-      
-   </script>
+	
+	//페이지가 로드된 이후에 getCategory 호출
+	$(document).ready(function() {
+		
+		$.ajax({
+			url: '../getCategory',
+			type: 'get',
+			//data:~~
+			success: function(data) {
+				console.log(data);
+				
+				var category01 = "";
+				
+ 				category01 += '<ul class="categoryList" style="position: relative;" onclick="getCategory_List(event);" >';
+	            data.forEach(function(item){
+	               category01 += '<li><a href="#" data-set='+JSON.stringify(item)+'>'+item.category_detail_nm+'</a></li>';
+	            })
+                category01 += '</ul>';		
+                
+                //아래에 추가 - appendChild()
+                $(".categoryListWrap").append(category01);	
+				
+			},
+			error: function(status, err) {
+				alert('카테고리 조회에 문제가 발생했습니다. 관리자에게 문의해주세요');
+			}
+		})
+	})
+	
+	
+</script>
+
+
+
+
+
+
+
 
 
 
