--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -40,6 +40,13 @@
   
     </div>
   </div>
+  
+  <script>
+	 var btn = document.querySelector(".kakaoBtn");
+	 btn.onclick = function() {
+		 location.href='https://kauth.kakao.com/oauth/authorize?response_type=code&client_id=0283c760642bb285136809ed8c816403&redirect_uri=http://127.0.0.1:8282/user/kakao';
+	 }
+  </script>
 
 </body>
 </html>
